--- a/data/style.css
+++ b/data/style.css
@@ -1,7 +1,57 @@
-html, body {
-  margin: 0;
-  padding: 0;
+html,
+body {
+  height: 100%;
 }
+
+body {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 100px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
+
 canvas {
   display: block;
+}
+
+.yo-yo-form {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.yo-yo-form .checkbox {
+  font-weight: 400;
+}
+.yo-yo-form .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.yo-yo-form .form-control:focus {
+  z-index: 2;
+}
+.yo-yo-form input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.yo-yo-form input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.dropdown-menu.pull-left {
+  left:0;
 }
