--- a/data/style.css
+++ b/data/style.css
@@ -1,20 +1,5 @@
-html,
 body {
-  height: 100%;
-}
-
-body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  padding-top: 100px;
-  padding-bottom: 40px;
+  padding-top: 50px;
   background-color: #f5f5f5;
 }
 
@@ -41,7 +26,7 @@ canvas {
 .yo-yo-form .form-control:focus {
   z-index: 2;
 }
-.yo-yo-form input[type="email"] {
+.yo-yo-form input[type="email"], .yo-yo-form select {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
